--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -164,7 +164,13 @@
     
     <div id="HTML_write_diary_modal_bg" class="write_diary_modal_bg" onclick="dismiss()">
         <div id="HTML_write_diary_modal_container" class="write_diary_modal_container">
-            <div class="write_diary_title">일기 쓰기</div>
+            <div class="write_diary_title">
+                일기 쓰기
+                <div class="dark_mode_container">
+                    다크모드
+                    <input type="checkbox" class="dark_mode_toggle">
+                </div>
+            </div>
             <div class="write_diary_mood_items">
                 <div class="write_diary_mood_title">오늘 기분은 어땠나요?</div>
                 <div class="write_diary_mood_buttonList">
