[240910] 윤준수 section08 마무리

--- a/diary.html
+++ b/diary.html
@@ -132,6 +132,11 @@
           <ul id="diaryList">
             <li id="add-list-alert" class="active">등록된 일기가 없습니다.</li>
           </ul>
+          <div id="diary_pagenation">
+            <button id="prevPage" onclick="prevPage()">이전</button>
+            <div id="pagenation_list"></div>
+            <button id="nextPage" onclick="nextPage()">다음</button>
+          </div>
         </div>
 
         <button id="upFloatingButton" class="">
