✨ feat: pagination 기능 추가

--- a/section08/index.html
+++ b/section08/index.html
@@ -195,33 +195,20 @@
                   </form>
                 </aside> -->
                 <div class="pagination">
+
+                  <div class="button-prev-page page-button">
+                    <button type="button" href="" onclick="prevPage()">
+                      <img src="./assets/images/icon_prev.svg" alt="이전 페이지 버튼" />
+                    </button>
+                  </div>
                   <ul class="page-list">
-                    <li class="button-prev-page page-button">
-                      <a href="">
-                        <img src="./assets/images/icon_prev.svg" alt="이전 페이지 버튼" />
-                      </a>
-                    </li>
-                    <li class="page-number active">
-                      <a href="">1</a>
-                    </li>
-                    <li class="page-number">
-                      <a href="">2</a>
-                    </li>
-                    <li class="page-number">
-                      <a href="">3</a>
-                    </li>
-                    <li class="page-number">
-                      <a href="">4</a>
-                    </li>
-                    <li class="page-number">
-                      <a href="">5</a>
-                    </li>
-                    <li class="button-next-page page-button active">
-                      <a href="">
-                        <img src="./assets/images/icon_next.svg" alt="다음 페이지 버튼" />
-                      </a>
-                    </li>
                   </ul>
+
+                  <div class="button-next-page page-button active">
+                    <button type="button" href="" onclick="nextPage()">
+                      <img src="./assets/images/icon_next.svg" alt="다음 페이지 버튼" />
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
