--- a/myDiary.html
+++ b/myDiary.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="overlay"> </div>
         <div class="container__header">
             <div class="header__title">
                 <div class="title__text">
