--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -259,6 +259,11 @@
           </div>
         </div>
       </div>
+      <div class="page_list_box">
+        <img src="./image/chevron_left.svg" width="24px" />
+        <div id="page_number_list"></div>
+        <img src="./image/chevron_right.svg" width="24px" />
+      </div>
       <div class="footer_layout">
         <div class="footer">
           <div class="footer_title" id="footer">예슬이의 다이어리</div>
