[240911] 박진태 Day12 과제

--- a/homework/section07/index.html
+++ b/homework/section07/index.html
@@ -100,6 +100,12 @@
         <!--일기 보여주는 곳-->
         <div id="HTML_일기보여주는곳" class="CSS_일기보여주는곳"></div>
 
+        <div class="CSS_페이지보여주는곳">
+          <button onclick="JS_이전페이지이동기능()">이전페이지</button>
+          <span id="HTML_페이지보여주는곳"></span>
+          <button onclick="JS_다음페이지이동기능()">다음페이지</button>
+        </div>
+
         <!-- 등록모달 -->
         <div id="HTML_등록모달그룹" class="CSS_공통모달그룹">
           <div
