[240911] CSS: 일기등록 - 토글 버튼을 누르면, 일기 등록과 관련된 모든 모달이 다크모드로 변환되어야합니다.

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -168,7 +168,7 @@
                 일기 쓰기
                 <div class="dark_mode_container">
                     다크모드
-                    <input type="checkbox" class="dark_mode_toggle">
+                    <input type="checkbox" class="dark_mode_toggle" onclick="onDarkMode(event)">
                 </div>
             </div>
             <div class="write_diary_mood_items">
