[240911] JS: 일기목록 - 검색어를 입력하면, 엔터키를 누르지 않아도 1000ms 뒤에 검색 목록이 자동으로 보여야합니다.

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -61,7 +61,7 @@
                         </ul>
                     </div>
                     <div class="search_bar_container">
-                        <img src="./assets/search.png"><input type="text" class="search_bar_text" placeholder="검색어를 입력해주세요.">
+                        <img src="./assets/search.png"><input type="text" class="search_bar_text" placeholder="검색어를 입력해주세요." oninput="searchDiary(event)">
                     </div>
                 </div>
                     
