--- a/daily.html
+++ b/daily.html
@@ -7,6 +7,17 @@
 
         <script type="module">
             import { paintPost } from "./utils/paintPost.js";
+            // 금일 날짜
+            const date = new Date();
+            const year = date.getFullYear();
+            const month =
+                date.getMonth() + 1 < 10
+                    ? `0${date.getMonth() + 1}`
+                    : date.getMonth() + 1;
+            const day =
+                date.getDate() < 10 ? `0${date.getDate()}` : date.getDate();
+            const today = `${year}.${month}.${day}`;
+
             window.onload = function () {
                 const images = document.querySelectorAll("img.post-img");
 
@@ -382,7 +393,39 @@
                     </div>
                 </div>
             </article>
-            <div class="pagination">1</div>
+            <div id="pagination" class="pagination">
+                <div id="page-left" class="page-left">
+                    <svg
+                        width="7"
+                        height="12"
+                        viewBox="0 0 7 12"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        style="cursor: pointer"
+                    >
+                        <path
+                            d="M2.8001 5.99688L6.7001 2.09688C6.88343 1.91354 6.9751 1.68021 6.9751 1.39688C6.9751 1.11354 6.88343 0.880208 6.7001 0.696875C6.51676 0.513542 6.28343 0.421875 6.0001 0.421875C5.71676 0.421875 5.48343 0.513542 5.3001 0.696875L0.700098 5.29688C0.600098 5.39687 0.529264 5.50521 0.487597 5.62188C0.445931 5.73854 0.425097 5.86354 0.425097 5.99688C0.425097 6.13021 0.445931 6.25521 0.487597 6.37188C0.529264 6.48854 0.600098 6.59688 0.700098 6.69688L5.3001 11.2969C5.48343 11.4802 5.71676 11.5719 6.0001 11.5719C6.28343 11.5719 6.51676 11.4802 6.7001 11.2969C6.88343 11.1135 6.9751 10.8802 6.9751 10.5969C6.9751 10.3135 6.88343 10.0802 6.7001 9.89688L2.8001 5.99688Z"
+                            fill="#333333"
+                        />
+                    </svg>
+                </div>
+                <div id="pagination-list" class="pagination-list"></div>
+                <div id="page-right" class="page-right">
+                    <svg
+                        width="7"
+                        height="12"
+                        viewBox="0 0 7 12"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        style="cursor: pointer"
+                    >
+                        <path
+                            d="M4.5998 5.99688L0.699805 2.09688C0.516471 1.91354 0.424805 1.68021 0.424805 1.39688C0.424805 1.11354 0.516471 0.880208 0.699805 0.696875C0.883138 0.513542 1.11647 0.421875 1.3998 0.421875C1.68314 0.421875 1.91647 0.513542 2.0998 0.696875L6.6998 5.29688C6.7998 5.39687 6.87064 5.50521 6.9123 5.62188C6.95397 5.73854 6.9748 5.86354 6.9748 5.99688C6.9748 6.13021 6.95397 6.25521 6.9123 6.37188C6.87064 6.48854 6.7998 6.59688 6.6998 6.69688L2.0998 11.2969C1.91647 11.4802 1.68314 11.5719 1.3998 11.5719C1.11647 11.5719 0.883138 11.4802 0.699805 11.2969C0.516471 11.1135 0.424805 10.8802 0.424805 10.5969C0.424805 10.3135 0.516471 10.0802 0.699805 9.89688L4.5998 5.99688Z"
+                            fill="#333333"
+                        />
+                    </svg>
+                </div>
+            </div>
         </main>
 
         <footer>
@@ -497,7 +540,7 @@
             <div class="modal_success">
                 <div class="daily-header">일기 등록 완료</div>
                 <div>등록이 완료되었습니다.</div>
-                <button class="modal_success_button" onclick="pushDaily()">
+                <button class="modal_success_button" id="modal_success_button">
                     확인
                 </button>
             </div>
@@ -522,10 +565,9 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="modal_fail"></div> -->
     </body>
 
-    <script src="./utils/pushDaily.js"></script>
+    <script src="./utils/pushDaily.js" type="module"></script>
     <script src="./utils/onClickDailyInfor.js"></script>
     <script src="./utils/onInputButtonChange.js"></script>
     <script src="./utils/onChangeSelected.js" type="module"></script>
@@ -546,4 +588,7 @@
     <script src="./utils/onScrollInfinite.js"></script>
     <script src="./utils/onInputSearch.js" type="module"></script>
     <script src="./utils/paintPost.js" type="module"></script>
+    <script src="./utils/calculationPagination.js" type="module"></script>
+    <script src="./utils/onClickPrevPagination.js" type="module"></script>
+    <script src="./utils/onClickNextPagination.js" type="module"></script>
 </html>
