--- a/homework/diary/index.html
+++ b/homework/diary/index.html
@@ -31,7 +31,7 @@
             <div class="CSS_메인">
                 <div
                     id="HTML_메인왼쪽일기보여주는곳"
-                    class="CSS_메인왼쪽_카드"
+                    class="CSS_메인왼쪽일기보여주는곳"
                 ></div>
 
                 <div class="CSS_메인오른쪽">
