[240910] section08 김민정 필수과제 제출

--- a/나만의 일기장/myDiary.html
+++ b/나만의 일기장/myDiary.html
@@ -116,6 +116,14 @@
           <p id="info">오늘의 기분을 담은 일기를 써보세요!</p>
         </div>
       </div>
+
+      <!-- 페이지네이션 -->
+      <div id="pagination">
+        <button class="pageBtns prev" onclick="prevBtn()">&lt;</button>
+        <span id="pageList"></span>
+        <button class="pageBtns next" onclick="nextBtn()">&gt;</button>
+      </div>
+
       <div class="footer">
         <div id="diaryName">민정이의 다이어리</div>
         <div class="footerInfo">대표 : 민쨩</div>
