[240911] 수정페이지 JS_회고 보여주기기능 구현함

--- a/homework/diary/edit.html
+++ b/homework/diary/edit.html
@@ -69,6 +69,7 @@
                 <div
                     id="id_회고목록보여주기"
                     class="HTML_회고목록보여주기"
+                    onchange="JS_회고그리기기능()"
                 ></div>
             </div>
         </div>
