--- a/homework/diary/detail.html
+++ b/homework/diary/detail.html
@@ -2,11 +2,12 @@
 <html lang="ko">
     <head>
         <title>상세페이지</title>
-        <link rel="stylesheet" href="./index.css" />
+        <link rel="stylesheet" href="./detail.css" />
     </head>
     <body>
         <div class="CSS_레이아웃">
             <div class="CSS_배너제목">민지의 다이어리</div>
+
             <div class="CSS_디테일상세메인">
                 <div id="HTML_제목들어가는곳" class="CSS_상세메인타이틀"></div>
 
@@ -19,8 +20,11 @@
                 </div>
 
                 <div class="CSS_디테일제목">제목</div>
-                <div id="HTML_내용들어가는곳"></div>
+                <div id="HTML_내용들어가는곳" class="CSS_내용들어가는곳"></div>
             </div>
+            <button class="CSS_카피버튼상자" onclick="JS_내용복사하기()">
+                <img src="./image/copy.png" class="CSS_카피사진" />
+            </button>
             <div class="CSS_버튼상자">
                 <button button class="CSS_수정버튼" onclick="JS_수정기능()">
                     수정
