feat: 페이지네이션에서 다음 및 이전 페이지로 이동 기능 구현

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -260,9 +260,13 @@
         </div>
       </div>
       <div class="page_list_box">
-        <img src="./image/chevron_left.svg" width="24px" />
+        <button class="go_to_page_set" onclick="goToPageSet(event)">
+          <img src="./image/chevron_left.svg" width="24px" />
+        </button>
         <div id="page_number_list"></div>
-        <img src="./image/chevron_right.svg" width="24px" />
+        <button class="go_to_page_set" onclick="goToPageSet(event)">
+          <img src="./image/chevron_right.svg" width="24px" />
+        </button>
       </div>
       <div class="footer_layout">
         <div class="footer">
