[240911] section8 페이지내이션 필터링, 검색 안했을 경우만 완료

--- a/class-css/section05/05-02/02-modal-box.html
+++ b/class-css/section05/05-02/02-modal-box.html
@@ -11,7 +11,7 @@
       left: 0;
     }
 
-    ㅌ .CSS_모달배경 {
+    .CSS_모달배경 {
       /* viewport width 보고있는 화면의 가로 전체 */
       width: 100vw;
       height: 100vh;
