[240911] CSS&JS: 페이지 네이션 만들어주세요. && 클릭된 페이지 번호 색이 변경되어야 합니다.

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -152,13 +152,12 @@
                         <div id="skeleton_box">
                             <div id="skeleton_bar"></div>
                         </div>
-                            <!-- fetch Dogs Image -->
+                            <!-- fetch Dogs Image 추가할 것! -->
                     </div>
                 </div>
-
-            </div>
+            </div> <!-- class = "contents" -->
                 <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button>
-        </div>
+        </div> <!-- class: contents_container -->
     </div>   
     
     
@@ -244,6 +243,11 @@
         </div>
     </div>
 
+    <section class="page_button_list_container" id="id_page_button_list_container">
+        <button onclick="goToPreviousPage()"><</button>
+        <div id="id_page_number_button_list"></div>
+        <button onclick="goToNextPage()">></button>
+    </section>
 
     <div id="HTML_footer" class="footer">
         <div class="footer_information">
