[240912] 지금까지 작업  푸쉬

--- a/homework/diary/detail.html
+++ b/homework/diary/detail.html
@@ -22,7 +22,7 @@
                 <div class="CSS_디테일제목">제목</div>
                 <div id="HTML_내용들어가는곳" class="CSS_내용들어가는곳"></div>
             </div>
-            <button class="CSS_카피버튼상자" onclick="JS_내용복사하기()">
+            <button class="CSS_카피버튼상자" onclick="JS_내용복사하기(); JS_토스트()">
                 <img src="./image/copy.png" class="CSS_카피사진" />
             </button>
             <div class="CSS_버튼상자">
