--- a/CSS&JS 마스터/메인페이지.html
+++ b/CSS&JS 마스터/메인페이지.html
@@ -254,6 +254,21 @@
         alt=""
         onclick="upToButton()"
       />
+      <div id="pageNation_Box">
+        <img
+          src="./assets/leftenable_outline_light_m.svg"
+          id="leftButton"
+          class="pageButton"
+          onclick="prevPageButton()"
+        />
+        <div id="pagesBox"></div>
+        <img
+          src="./assets/leftenable_outline_light_m.svg"
+          id="rightButton"
+          class="pageButton"
+          onclick="nextPageButton()"
+        />
+      </div>
     </div>
     <!--푸터-->
     <div class="footer">
