페이지네이션 완성

--- a/Section2/index.html
+++ b/Section2/index.html
@@ -40,12 +40,7 @@
             <div class="CSS_등록상자_내용">오늘 기분은 어땠나요?</div>
             <div class="CSS_라디오그룹">
               <div class="CSS_라디오버튼">
-                <input
-                  type="radio"
-                  name="HTML_기분선택버튼"
-                  value="행복"
-                  checked
-                />
+                <input type="radio" name="HTML_기분선택버튼" value="행복" checked />
                 <div>행복해요</div>
               </div>
               <div class="CSS_라디오버튼">
