--- a/04-01-diary/main.html
+++ b/04-01-diary/main.html
@@ -3,6 +3,7 @@
 <head>
     <title>Diary</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/main.mobile.css" media="(max-width: 765px)" />
     <script src="./javascript/main.js" ></script>
 </head>
@@ -11,29 +12,33 @@
     <!-- 등록 모달 -->
     <div id="html_modal_group" class="modal_group">
         <div class="modal_background" onclick="JS_close()"></div>
-        <div class="modal_register">
-            <div class="register_title">일기 쓰기</div>
+        <div class="modal_register" id="html_modal_register">
+            <div class="register_title">일기 쓰기
+                <div class="darkmode"> 다크모드
+                    <input type="checkbox" id="darkmode" class="CSS_toggle" onclick="JS_dark(event)" />
+                </div>
+            </div>
                 <div class="register_contentbox">
                     <div class="register_content">오늘 기분은 어땠나요?</div>
                     <div class="radio_group">
                         <div class="radio_button">
-                            <input type="radio" name="select_feeling" value="happy" checked>
+                            <input type="radio" class="CSS_radio" name="select_feeling" value="happy" checked>
                             <div>행복해요</div>
                         </div>
                         <div class="radio_button">
-                            <input type="radio" name="select_feeling" value="sad">
+                            <input type="radio" class="CSS_radio" name="select_feeling" value="sad">
                             <div>슬퍼요</div>
                         </div>
                         <div class="radio_button">
-                            <input type="radio" name="select_feeling" value="surprise">
+                            <input type="radio" class="CSS_radio" name="select_feeling" value="surprise">
                             <div>놀랐어요</div>
                         </div>
                         <div class="radio_button">
-                            <input type="radio" name="select_feeling" value="angry">
+                            <input type="radio" class="CSS_radio" name="select_feeling" value="angry">
                             <div>화나요</div>
                         </div>
                         <div class="radio_button">
-                            <input type="radio" name="select_feeling" value="etc">
+                            <input type="radio" class="CSS_radio" name="select_feeling" value="etc">
                             <div>기타</div>
                         </div>
                     </div>
@@ -46,7 +51,7 @@
                 </div>
                 <div class="register_button" id="reset">
                     <button class="close_button" onclick="JS_confirm()">닫기</button>
-                    <button class="diary_button" onclick="JS_write()">등록하기</button>
+                    <button class="diary_button" id="regist_button" onclick="JS_write()" disabled>등록하기</button>
                 </div>
         </div>
     </div>
@@ -96,39 +101,41 @@
 
         <div class="filter_background">
             <div class="search_group">
-                <!-- <select class="filter" onchange="JS_filtering(event)">
-                    <option selected>전체</option>
-                    <option value="happy">행복해요</option>
-                    <option value="sad">슬퍼요</option>
-                    <option value="surprise">놀랐어요</option>
-                    <option value="angry">화나요</option>
-                    <option value="etc">기타</option>
-                </select> -->
-
-                <div class="dropdown">
-                    <input type="checkbox" id="html_dropdown_title" class="dropdown_title" onchange="JS_filtering(event)" />
+                <div class="filter">
+                        <input type="checkbox" id="html_dropdown_title" class="dropdown_title" />
                     <ul class="dropdown_menu">
-                        <li><input type="radio" name="feeling" id="all" onclick="JS_dropdown(event)" />
-                            <label for="all">전체</label>
+                        <li><input type="radio" name="feeling" id="all" value="전체" checked onclick="JS_dropdown(event)" />
+                            <label for="all">전체
+                                <img src="./assets/check_outline_light_xs.png" />
+                            </label>
                         </li>
-                        <li><input type="radio" name="feeling" id="happy" onclick="JS_dropdown(event)" />
-                            <label for="happy">행복해요</label>
+                        <li><input type="radio" name="feeling" id="happy" value="행복해요" onclick="JS_dropdown(event)" />
+                            <label for="happy">행복해요
+                                <img src="./assets/check_outline_light_xs.png" />
+                            </label>
                         </li>
-                        <li><input type="radio" name="feeling" id="sad" onclick="JS_dropdown(event)" />
-                            <label for="sad">슬퍼요</label>
+                        <li><input type="radio" name="feeling" id="sad" value="슬퍼요" onclick="JS_dropdown(event)" />
+                            <label for="sad">슬퍼요
+                                <img src="./assets/check_outline_light_xs.png" />
+                            </label>
                         </li>
-                        <li><input type="radio" name="feeling" id="surprise" onclick="JS_dropdown(event)" />
-                            <label for="surprise">놀랐어요</label>
+                        <li><input type="radio" name="feeling" id="surprise" value="놀랐어요" onclick="JS_dropdown(event)" />
+                            <label for="surprise">놀랐어요
+                                <img src="./assets/check_outline_light_xs.png" />
+                            </label>
                         </li>
-                        <li><input type="radio" name="feeling" id="angry" onclick="JS_dropdown(event)" />
-                            <label for="angry">화나요</label>
+                        <li><input type="radio" name="feeling" id="angry" value="화나요" onclick="JS_dropdown(event)" />
+                            <label for="angry">화나요
+                                <img src="./assets/check_outline_light_xs.png" />
+                            </label>
                         </li>
-                        <li><input type="radio" name="feeling" id="etc" onclick="JS_dropdown(event)" />
-                            <label for="etc">기타</label>
+                        <li><input type="radio" name="feeling" id="etc" value="기타" onclick="JS_dropdown(event)" />
+                            <label for="etc">기타
+                                <img src="./assets/check_outline_light_xs.png" />
+                            </label>
                         </li>
                     </ul>
                 </div>
-
                 
                 <div class="search_bar">
                     <img src="./assets/search_outline_light_m.png" />
@@ -142,20 +149,34 @@
         </div>
 
 
-        <div class="main">
+        <div class="main" id="main_layout">
             <div id="show_diary_html" class="show_diary_css"></div>
 
-        
-        <button class="up_scroll" id="floating_button">
-            <img src="./assets/up_scroll.png" onclick="JS_scroll()" />
-        </button>
+
+        <div class="floating_layout">
+            <button class="up_scroll" id="floating_button">
+                <img src="./assets/up_scroll.png" onclick="JS_scroll()" />
+            </button>
+        </div>
         </div>
     </div>
 
+    <div class="pagination_layout">
+        <button class="pagination_icon" onclick="JS_beforePage()">
+            <img src="./assets/leftside_icon.png" />
+        </button>
+        <span id="pagination">
+            <button class="page_button" onclick="JS_page()"></button>
+        </span>
+        <button class="pagination_icon" onclick="JS_nextPage()">
+            <img src="./assets/rightside_button.png" />
+        </button>
+    </div>
+
     <div class="footer_layout" id="footer_section">
-            <div class="footer_title">민지의 다이어리</div>
-            <div class="footer_boss">대표 : {name}</div>
-            <div class="footer_co">Copyright © 2024.{name} Co., Ltd.</div>
+        <div class="footer_title">민지의 다이어리</div>
+        <div class="footer_boss">대표 : {name}</div>
+        <div class="footer_co">Copyright © 2024.{name} Co., Ltd.</div>
     </div>
 </body>
 </html>
