[240912] 정수연 section08 과제 제출

--- a/04-01-diary/main.html
+++ b/04-01-diary/main.html
@@ -166,7 +166,7 @@
             <img src="./assets/leftside_icon.png" />
         </button>
         <span id="pagination">
-            <button class="page_button" onclick="JS_page()"></button>
+            <button class="page_button"></button>
         </span>
         <button class="pagination_icon" onclick="JS_nextPage()">
             <img src="./assets/rightside_button.png" />
