--- a/DAY04/diary-detail.html
+++ b/DAY04/diary-detail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🐨의 다이어리</title>
     <link rel="stylesheet" href="./diary-detail.css" />
-    <script src="./diary-detail.js"></script>
+    <script defer src="./diary-detail.js"></script>
   </head>
   <body>
     <div id="토스트메시지" class="토스트">
