--- a/daily.html
+++ b/daily.html
@@ -2,6 +2,7 @@
 <html lang="ko">
     <head>
         <title>daily</title>
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style/dailyStyle.css" />
 
