--- a/CSS&JS 마스터/메인페이지.html
+++ b/CSS&JS 마스터/메인페이지.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./메인페이지.css" />
