[240912] JS_토스트기능구현 완성함

--- a/homework/diary/detail.html
+++ b/homework/diary/detail.html
@@ -22,8 +22,8 @@
                 <div class="CSS_디테일제목">제목</div>
                 <div id="HTML_내용들어가는곳" class="CSS_내용들어가는곳"></div>
             </div>
-            <button class="CSS_카피버튼상자" onclick="JS_내용복사하기(); JS_토스트()">
-                <img src="./image/copy.png" class="CSS_카피사진" />
+            <button class="CSS_카피버튼상자" onclick= "JS_내용복사하기(); ">
+                <img src="./image/copy.png" class="CSS_카피사진"   />
             </button>
             <div class="CSS_버튼상자">
                 <button button class="CSS_수정버튼" onclick="JS_수정기능()">
@@ -52,6 +52,11 @@
                     onchange="JS_회고그리기기능()"
                 ></div>
             </div>
+
+            <div id="id_토스트상자" onclick="JS_내용복사하기()" onclick = JS_토스트()>
+            </div>
+
+            <div id="HTML_토스트들어가는곳"></div>
         </div>
         <script src="./detail.js"></script>
     </body>
