--- a/homework/diary/index.html
+++ b/homework/diary/index.html
@@ -26,6 +26,7 @@
                     <option value="화남선택">화나요</option>
                     <option value="기타선택">기타</option>
                 </select>
+                <button class="CSS_일기쓰기모달버튼">일기쓰기</button>
             </div>
 
             <div class="CSS_메인">
@@ -34,7 +35,7 @@
                     class="CSS_메인왼쪽일기보여주는곳"
                 ></div>
 
-                <div class="CSS_메인오른쪽">
+                <!-- <div class="CSS_메인오른쪽">
                     <img src="./image/writing.png" alt="writing" />
                     <div class="CSS_메인오른쪽_중간">
                         <div class="CSS_오늘기분">오늘기분은 어땠나요</div>
@@ -102,7 +103,7 @@
                     <div class="CSS_플로팅버튼" onclick="플로팅버튼()">
                         <img src="./image/arrow_up.png" />
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="CSS_푸터">
